--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,9 @@
 <body>
 
     <h1>Contacto</h1>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia possimus mollitia blanditiis in voluptatibus accusamus nobis eligendi ad, dignissimos, temporibus quos tempore repudiandae fugiat iure quasi! Harum assumenda culpa et.
+    </p>
     
 </body>
 </html>
